觸發方式新增 workflow_dispatch
會在 GitHub 上提供一個按鈕用於手動觸發，方便測試。

--- a/.github/workflows/get_odds_everyday.yml
+++ b/.github/workflows/get_odds_everyday.yml
@@ -3,6 +3,7 @@ name: run mlb_odds_crawler.py
 on:
   schedule:
     - cron: '30 12 * * *' # 等同 UTC+8 20:30 Everyday
+  workflow_dispatch: {}
 
 jobs:
   build:
